Fixed bug in load_faces, added face twisting tests.

--- a/test_states.yaml
+++ b/test_states.yaml
@@ -112,3 +112,45 @@ down_2:
     3: "GGGGGGGGG"
     4: "BBYBBYBBY"
     5: "VVRVVRVVR"
+
+indexed_faces:
+    0: "123456789"
+    1: "123456789"
+    2: "123456789"
+    3: "123456789"
+    4: "123456789"
+    5: "123456789"
+
+face_right_0:
+    0: "123456789"
+    1: "123456789"
+    2: "123456789"
+    3: "123456789"
+    4: "741852963"
+    5: "123456789"
+
+face_right_2:
+    0: "123456789"
+    1: "123456789"
+    2: "123456789"
+    3: "123456789"
+    4: "123456789"
+    5: "741852963"
+
+face_left_0:
+    0: "123456789"
+    1: "123456789"
+    2: "123456789"
+    3: "123456789"
+    4: "369258147"
+    5: "123456789"
+
+face_left_2:
+    0: "123456789"
+    1: "123456789"
+    2: "123456789"
+    3: "123456789"
+    4: "123456789"
+    5: "369258147"
+
+
