Added lateral twists (top twists), and associated tests.

--- a/test_states.yaml
+++ b/test_states.yaml
@@ -153,4 +153,36 @@ face_left_2:
     4: "123456789"
     5: "369258147"
 
+top_row_right_0:
+    0: "123456789"
+    1: "123256389"
+    2: "741852963"
+    3: "123256389"
+    4: "741456789"
+    5: "741456789"
+
+top_row_right_1:
+    0: "123456789"
+    1: "143456769"
+    2: "123456789"
+    3: "143456769"
+    4: "123852789"
+    5: "123852789"
+
+top_row_left_0:
+    0: "123456789"
+    1: "323256189"
+    2: "369258147"
+    3: "323256189"
+    4: "147456789"
+    5: "147456789"
+
+top_row_left_1:
+    0: "123456789"
+    1: "163456749"
+    2: "123456789"
+    3: "163456749"
+    4: "123258789"
+    5: "123258789"
+
 
